--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     <main>
         <section id="about">
             <h3>О пельменях</h3>
-            <p>Не пробовал пельмени - не человек...</p>
-        </section>
-        <section id="resume">
-            <h3>Резюме</h3>
             <p><video controls>
                 <source src="how.mp4" type="video/mp4">
             </video></p>
+        </section>
+        <section id="resume">
+            <h3>Резюме</h3>
+            <p>Не пробовал пельмени - не человек...(создатель не человек)</p>
         </section>
         <section id="juniorweb">
             <h3>JuniorPEIM</h3>
