--- a/index2.html
+++ b/index2.html
@@ -16,16 +16,21 @@
     <main>
         <section class="project">
             <h2>Проект 1: Пельмешки с лосем </h2>
-            <p>Описание: </p>
+            <ul> 
+                <li>1. Купите лося (но советую пристрелить) </li>
+                <li>2. Сделайте из него пельмени</li>
+              </ul>
         </section>
         <section class="project">
-            <h2>Проект 2: Портфолио разработчика</h2>
-            <p>Описание: Разработка личного портфолио с примерами работ, информацией о навыках и контактами для связи.</p>
+            <h2>Проект 2:Варенники</h2>
+            <ul> 
+                <li>1. Спросите у знакомой бабушки как их сделать</li>
+                <li>2. Поищите в интернете</li>
+              </ul>
         </section>
         <section class="project">
-            <h2>Проект 3: Интернет-магазин</h2>
-            <p>Описание: Создание интернет-магазина с возможностью добавления товаров в корзину, оформления заказов и интеграцией с платежными системами.</p>
-        </section>
+            <h2>Остальное вы найдете в интернете</h2>
+            <a href="https://www.google.com/search?q=%D1%8F%D0%BD%D0%B4%D0%B5%D0%BA%D1%81&rlz=1C1GCEU_ruRU1136RU1138&oq=%D1%8F%D0%BD%D0%B4%D0%B5%D0%BA%D1%81&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIHCAEQABiPAjIHCAIQABiPAtIBCDQ1OTFqMGoxqAIAsAIA&sourceid=chrome&ie=UTF-8" target="_blank">Ссылка тут</a>    
     </main>
 </body>
 </html>
